# ML-For-Beginners

./: .gitignore  README.md  environment.yml  invite_users_to_organization.py  invite_users_to_project.py  main.py  pyproject.toml  requirements.txt  run_all_notebooks.py
1-Introduction/: README.md
1-Introduction/1-intro-to-ML/: README.md
1-Introduction/2-history-of-ML/: README.md
1-Introduction/3-fairness/: README.md
1-Introduction/4-techniques-of-ML/: README.md
10-Workshop/: 4-Workshop-VC.ipynb
17-TimeSeries/2-ARIMA/: README.md
17-TimeSeries/3-SVR/: README.md
17-TimeSeries/images/: 7-TimeSeries.ipynb
2-Regression/: README.md
2-Regression/1-Tools/: README.md  notebook.ipynb
2-Regression/2-Data/: README.md
2-Regression/3-Linear/: README.md  notebook.ipynb
2-Regression/4-Logistic/: README.md
3-Classification/1-Introduction/: README.md
3-Classification/2-Classifiers-1/: README.md
3-Classification/3-Classifiers-2/: README.md
3-Classification/4-Applied/: README.md
3-Classification/images/: 3-Classification.ipynb
4-Web-App/: README.md
4-Web-App/1-Web-App/: README.md
4-Web-App/images/: 4-Workshop-VC.ipynb
5-Clustering/: README.md
5-Clustering/1-Visualize/: README.md
5-Clustering/2-K-Means/: README.md
5-Clustering/images/: 5-Clustering.ipynb
6-NLP/: README.md  environment.yml
6-NLP/1-Introduction-to-NLP/: README.md
6-NLP/2-Tasks/: README.md
6-NLP/3-Translation-Sentiment/: README.md
6-NLP/4-Hotel-Reviews-1/: README.md  notebook.ipynb
7-EdgeImpulse/: 7-1-TF-Keras-beginner.ipynb  7-2-EI-python-sdk-with-tf-keras.ipynb  MLME24_Assignment_2.ipynb
8-Reinforcement/: environment.yml  requirements.txt
sketchnotes/: README.md
(+30 files in other folders)
