[project]
name = "ml-for-beginners"
version = "0.2.0"
description = "MLME devcontainer with uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
"scikit-learn",
  "pillow",
  "seaborn",
  "ipywidgets",
  "matplotlib",
  "numpy",
  "pandas",
  "tqdm",
  # "scikit-image",
  "skl2onnx",
  # "pydantic",
  # "pycaret",
  # "gradio",
  # "fastcore",
  # "nbdev",
  # "textblob",
  # "gym",
  # "pygame",
]
