[project]
name = "ml-for-beginners"
version = "0.3.0"
description = "MLME devcontainer with uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn",
    "pillow",
    "seaborn",
    "ipywidgets",
    "matplotlib",
    "numpy",
    "pandas",
    "tqdm",
    # "scikit-image",
    "skl2onnx",
    # "pydantic",
    # "pycaret",
    # "gradio",
    # "fastcore",
    # "nbdev",
    # "textblob",
    # "gym",
    # "pygame",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "uv>=0.8.15",
]
