[project]
name = "ml-for-beginners"
version = "0.3.0"
description = "MLME devcontainer with uv"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "scikit-learn",
    "pillow",
    "seaborn",
    "ipywidgets",
    "matplotlib",
    "numpy",
    "pandas",
    "tqdm",
    # "scikit-image",
    "skl2onnx",
    # "pydantic",
    "pycaret >=3.0",
    # "gradio",
    # "fastcore",
    # "nbdev",
    # "textblob",
    # "gym",
    # "pygame",
    "textblob==0.17.1",
    "nbclient>=0.10.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "uv>=0.8.15",
]
